[metadata]
name = enotebook
version = 1.0.0
author= J Oshin
description = Example notebook
url = https://github.com/j-oshi/docker-jupyter-notebook
classifiers=
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.9

[options.packages.find]
where=src  
include=enotebook*  

